--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ on:
 
 
 jobs:
+  strategy:
+    max-parallel: 1
   # Build the app using craco build
   build:
     name: Build the App (craco build)
@@ -20,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
+        node-version: [15.x]
 
     steps:
       - uses: actions/checkout@v2
