--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,5 @@ jobs:
           BRANCH: public
           FOLDER: build
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG: ${GITHUB_REF##*/}
 
