--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/fira-code": "^4.5.8",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.12.1",
     "gatsby-plugin-emotion": "^7.12.1",
+    "gatsby-plugin-image": "^2.12.1",
     "gatsby-plugin-mdx": "^3.12.1",
+    "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-source-filesystem": "^4.12.1",
+    "gatsby-transformer-sharp": "^4.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
