--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,32 +1,27 @@
-name: Build and Deploy to Hostinger
+name: ci
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
+    paths: [ "/dist" ]
   pull_request:
     branches: [ main ]
+    paths: [ "/dist" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 
 jobs:
-  build-and-deploy:
-    name: Build and Deploy to Hostinger
+  deploy:
+    name: Deploy to Hostinger
     runs-on: ubuntu-latest    
     steps:
       - uses: actions/checkout@main
 
-      - name: Use Node.js 15.x
-        uses: actions/setup-node@v1
-        with:
-          node-version: 15.x
-      - run: npm ci
-      - run: npm run predeploy --if-present
-
-      - name: Deploy
+      - name: Push to Public Branch
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
