--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
-    paths: [ "/dist" ]
+    paths: [ "dist/**" ]
   pull_request:
     branches: [ main ]
-    paths: [ "/dist" ]
+    paths: [ "dist/**" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
