--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-graph-vis": "^1.0.7",
     "react-helmet": "^6.1.0",
     "remark-html-katex": "^3.0.0",
     "remark-math": "^3.0.1"
