--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-mdx": "^3.12.1",
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
+    "gatsby-remark-autolink-headers": "^5.13.0",
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
     "katex": "^0.13.24",
