--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "gatsby-plugin-react-helmet": "^5.12.1",
     "gatsby-plugin-sharp": "^4.12.1",
     "gatsby-remark-autolink-headers": "^5.13.0",
+    "gatsby-remark-prismjs": "^6.22.0",
     "gatsby-source-filesystem": "^4.12.1",
     "gatsby-transformer-sharp": "^4.12.1",
     "katex": "^0.13.24",
     "lodash": "^4.17.21",
+    "prismjs": "^1.29.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-graph-vis": "^1.0.7",
