--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# build output
+dist/
+
+# generated types
+.astro/
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules/
 
-# testing
-/coverage
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-/src/img/skills/old
+# environment variables
+.env
+.env.production
 
+# macOS-specific files
+.DS_Store
 
-# Build directorys
-/.cache
-/public
-/dist
+# jetbrains setting folder
+.idea/
