--- a/package.json
+++ b/package.json
@@ -1,53 +1,33 @@
 {
   "name": "jsimonrichard-resume",
-  "version": "1.0.0",
   "private": true,
-  "description": "jsimonrichard-resume",
-  "author": "jsimonrichard",
-  "keywords": [
-    "gatsby"
-  ],
+  "type": "module",
+  "version": "0.0.1",
+  "author": "J. Simon Richard <jsimonrichard@gmail.com> (https://jsimonrichard.com)",
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "resolutions": {
-    "source-map": "^0.8.0-beta.0"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "source-map": "^0.8.0-beta.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/fira-code": "^4.5.12",
-    "@fontsource/fira-sans": "^4.5.10",
-    "@fortawesome/fontawesome-svg-core": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.2",
-    "gatsby": "^4.12.1",
-    "gatsby-plugin-emotion": "^7.12.1",
-    "gatsby-plugin-image": "^2.12.1",
-    "gatsby-plugin-mdx": "^3.12.1",
-    "gatsby-plugin-react-helmet": "^5.12.1",
-    "gatsby-plugin-sharp": "^4.12.1",
-    "gatsby-remark-autolink-headers": "^5.13.0",
-    "gatsby-remark-prismjs": "^6.22.0",
-    "gatsby-source-filesystem": "^4.12.1",
-    "gatsby-transformer-sharp": "^4.12.1",
-    "katex": "^0.13.24",
-    "lodash": "^4.17.21",
-    "prismjs": "^1.29.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-graph-vis": "^1.0.7",
-    "react-helmet": "^6.1.0",
-    "remark-html-katex": "^3.0.0",
-    "remark-math": "^3.0.1"
+    "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^3.1.2",
+    "@astrojs/solid-js": "^4.4.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/fira-code": "^5.0.18",
+    "@fontsource/fira-sans": "^5.0.20",
+    "astro": "^4.11.5",
+    "clsx": "^2.1.1",
+    "remark-html-katex": "^4.0.1",
+    "remark-math": "^6.0.0",
+    "remark-prism": "^1.3.6",
+    "solid-icons": "^1.1.0",
+    "solid-js": "^1.8.18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
+    "vis-network": "^9.1.9"
   }
 }
