--- a/package.json
+++ b/package.json
@@ -12,22 +12,27 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/mdx": "^3.1.2",
-    "@astrojs/solid-js": "^4.4.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@fontsource/fira-code": "^5.0.18",
-    "@fontsource/fira-sans": "^5.0.20",
-    "astro": "^4.11.5",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/mdx": "^3.1.9",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/solid-js": "^4.4.3",
+    "@astrojs/tailwind": "^5.1.2",
+    "@fontsource/fira-code": "^5.1.0",
+    "@fontsource/fira-sans": "^5.1.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro": "^4.16.13",
     "clsx": "^2.1.1",
-    "remark-html-katex": "^4.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "remark-html-katex": "^5.0.0",
     "remark-math": "^6.0.0",
     "remark-prism": "^1.3.6",
     "solid-icons": "^1.1.0",
-    "solid-js": "^1.8.18",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
+    "solid-js": "^1.9.3",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3",
     "vis-network": "^9.1.9"
   }
 }
