--- a/.editorconfig
+++ b/.editorconfig
@@ -6,9 +6,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.js]
+[*.js,*.astro,*.jsx,*.ts,*.tsx,*.json]
 charset = utf-8
-
-[*.js]
 indent_style = space
 indent_size = 2
