--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,10 @@
 {
-  "recommendations": ["astro-build.astro-vscode", "esbenp.prettier-vscode"],
+  "recommendations": [
+    "astro-build.astro-vscode",
+    "esbenp.prettier-vscode",
+    "bradlc.vscode-tailwindcss",
+    "formulahendry.auto-rename-tag",
+    "editorconfig.editorconfig"
+  ],
   "unwantedRecommendations": []
 }
