--- a/package.json
+++ b/package.json
@@ -17,17 +17,21 @@
     "@astrojs/react": "^3.6.2",
     "@astrojs/solid-js": "^4.4.3",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource-variable/jetbrains-mono": "^5.1.1",
     "@fontsource/fira-code": "^5.1.0",
     "@fontsource/fira-sans": "^5.1.0",
+    "@fontsource/merriweather": "^5.1.0",
+    "@fontsource/source-sans-pro": "^5.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.13",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "remark-html-katex": "^5.0.0",
+    "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "remark-prism": "^1.3.6",
+    "remark-rehype": "^11.1.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.3",
     "tailwind-merge": "^2.5.4",
