Create printable resume

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fontsource/fira-sans": "^5.1.0",
     "@fontsource/merriweather": "^5.1.0",
     "@fontsource/source-sans-pro": "^5.1.0",
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.13",
