--- a/src/content/leadershipTeachingExperience/cpt-coordinator.yaml
+++ b/src/content/leadershipTeachingExperience/cpt-coordinator.yaml
@@ -6,4 +6,4 @@ location: Cleveland State University, Cleveland, OH
 sortIndex: 3
 notes:
   - Hire, train, and manage a team of eight CPTs; manage employee time sheets, make data-driven decisions regarding hiring and tutoring assignments, and improve IT infrastructure and cybersecurity.
-  - Lead the organization of seven computer science events and coordinate with faculty and with our sister program, the Engineering Peer Teachers.
+  - Lead the organization of eight computer science events to date and coordinate with faculty and with our sister program, the Engineering Peer Teachers.
