--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
-  "cSpell.words": ["Beachwood", "Kirtland", "Painesville", "Willoughby"],
+  "cSpell.words": [
+    "abelian",
+    "Beachwood",
+    "bijectively",
+    "Coxeter",
+    "Kirtland",
+    "Painesville",
+    "Schreier",
+    "Willoughby"
+  ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
