--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.13",
     "clsx": "^2.1.1",
+    "katex": "^0.16.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "remark-prism": "^1.3.6",
-    "remark-rehype": "^11.1.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3",
+    "vis-data": "^7.1.9",
     "vis-network": "^9.1.9"
   }
 }
