--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,22 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [main]
+    paths:
+      - 'src/**'
+      - 'public/**'
+      - '.github/workflows/main.yml'
+      - 'package.json'
+      - '*js'
+      - 'bun.lockb'
   pull_request:
     branches: [main]
+    paths:
+      - 'src/**'
+      - 'public/**'
+      - '.github/workflows/main.yml'
+      - 'package.json'
+      - '*js'
+      - 'bun.lockb'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
