Fix small mistakes

--- a/src/content/resume-tech-experience/swe-intern-ims.yaml
+++ b/src/content/resume-tech-experience/swe-intern-ims.yaml
@@ -1,7 +1,7 @@
 name: Software Engineering Intern
 start: July 2020
 end: December 2021
-location: Integrated Mill Systems Inc., Cleveland, OH
+location: Integrated Mill Systems Inc., Willoughby, OH
 notes:
   - Developed a PLC data-logging service for the Raspberry Pi using Python / Bash Scripting, Docker, Rust, and sockets.
   - Wrote a locally served data-visualization web app using React and d3.js.
