--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@fontsource/merriweather": "^5.1.0",
     "@fontsource/source-sans-pro": "^5.1.0",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.13",
+    "caniuse-lite": "^1.0.30001731",
     "clsx": "^2.1.1",
     "katex": "^0.16.11",
     "react": "^18.3.1",
@@ -33,6 +35,7 @@
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
     "remark-prism": "^1.3.6",
+    "remark-smartypants": "^3.0.2",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.3",
     "tailwind-merge": "^2.5.4",
