Update resume details

--- a/src/content/resume-leadership-teaching-experience/cpt-coordinator.yaml
+++ b/src/content/resume-leadership-teaching-experience/cpt-coordinator.yaml
@@ -1,9 +1,11 @@
 name: Computer Peer Teacher (CPT) Coordinator
 cover: ./wpt-logo-200x200.png
 start: August 2023
-end: Present
+end: May 2025
 location: Cleveland State University, Cleveland, OH
 sortIndex: 3
 notes:
-  - Hire, train, and manage a team of eight CPTs; manage employee time sheets, make data-driven decisions regarding hiring and tutoring assignments, and improve IT infrastructure and cybersecurity.
-  - Lead the organization of eight computer science events to date and coordinate with faculty and with our sister program, the Engineering Peer Teachers.
+  - Managed a team of 8 CPTs, including hiring, training, class assignments, & time sheets
+  - Improved IT infrastructure and cybersecurity.
+  - Organized 8 computer science events, coordinated with faculty and peer programs.
+  - Received the Washkewicz Peer Teacher (WPT) Leadership Award
