--- a/src/content/resume-leadership-teaching-experience/cpt.yaml
+++ b/src/content/resume-leadership-teaching-experience/cpt.yaml
@@ -5,4 +5,5 @@ end: August 2023
 sortIndex: 2
 location: Cleveland State University, Cleveland, OH
 notes:
-  - Provided 1-on-1 assistance to computer science students; answered questions primarily related to Python, Java, and C; helped organize computer science events.
+  - Provided 1-on-1 assistance to students learning Python, Java, and C
+  - Helped organize computer science events.
