--- a/src/content/resume-education/b.s-in-math-and-computer-science.yaml
+++ b/src/content/resume-education/b.s-in-math-and-computer-science.yaml
@@ -1,6 +1,6 @@
 name: B.S. Computer Science and Mathematics
 gpa: '4.0'
-graduation: Expected graduation in May 2025
+graduation: May 2025
 location: Cleveland State University, Cleveland, OH
 notes:
   - 'Honors Thesis: "Hybrid Quantum or Purely Classical? Assessing the Utility of Quantum Feature Embeddings."'
