--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@fontsource/merriweather": "^5.1.0",
     "@fontsource/source-sans-pro": "^5.1.0",
     "@modyfi/vite-plugin-yaml": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "astro": "^4.16.13",
     "caniuse-lite": "^1.0.30001731",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "katex": "^0.16.11",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-katex": "^7.0.1",
@@ -38,10 +42,13 @@
     "remark-smartypants": "^3.0.2",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.3",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss": "^3.4.15",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.6.3",
     "vis-data": "^7.1.9",
     "vis-network": "^9.1.9"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
